[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Units/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/World/World.gd" type="Script" id=2]
[ext_resource path="res://src/World/EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/World/ObstacleSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bio Unit - Satellite.ogg" type="AudioStream" id=5]
[ext_resource path="res://src/World/Sounds.gd" type="Script" id=6]
[ext_resource path="res://eat.wav" type="AudioStream" id=7]
[ext_resource path="res://sad_trombone.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/stam_font.tres" type="DynamicFont" id=9]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.389404, 0.809341, 0.90625, 1, 0.0228, 0.05624, 0.19, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )

[node name="World" type="Node2D"]
position = Vector2( 0.471924, 0 )
script = ExtResource( 2 )
time_mult = 0.1
debug_mode = true

[node name="BG" type="TextureRect" parent="."]
margin_left = 1024.0
margin_right = 17024.0
margin_bottom = 1024.0
rect_rotation = 90.0
texture = SubResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Debug" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="Label" parent="Debug"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )
text = "Stamina: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Debug"]
anchor_left = 0.025
anchor_top = -0.025
anchor_right = 0.025
anchor_bottom = -0.025
margin_left = 913.0
margin_top = 2.0
margin_right = 1023.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 9 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 479.979, 38.1402 )

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 1023.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_left = 291.0
margin_top = 188.946
margin_right = 701.0
margin_bottom = 421.946
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 94.0
margin_right = 410.0
margin_bottom = 114.0
text = "Resume"

[node name="ExitButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 118.0
margin_right = 410.0
margin_bottom = 138.0
text = "Exit"

[node name="GameOver" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 1023.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
margin_left = 291.0
margin_top = 188.946
margin_right = 701.0
margin_bottom = 421.946
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 67.0
margin_right = 410.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 9 )
text = "Game over."
align = 1

[node name="Score" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 94.0
margin_right = 410.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 9 )
text = "You ate # fishes"
align = 1

[node name="NewGameButton" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 121.0
margin_right = 410.0
margin_bottom = 141.0
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 145.0
margin_right = 410.0
margin_bottom = 165.0
text = "Main Menu"

[node name="Sounds" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="Ambient" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Eat" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Die" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="GameOver/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
